--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,9 +11,9 @@
   <div>
     <ul>
       <lh>Categories</lh>
-      <li><a href="/houses/">Houses</a></li>
-      <li><a href="/bikes/">Bikes</a></li>
-      <li><a href="/skis/">Skis</a></li>
+      <li><a href="/categories/1/">Houses</a></li>
+      <li><a href="/categories/2/">Bikes</a></li>
+      <li><a href="/categories/3/">Skis</a></li>
     </ul>
   </div>
 </div>
